--- a/app/views/images/index.html.erb
+++ b/app/views/images/index.html.erb
@@ -1,5 +1,6 @@
-<h1>Listing images</h1>
+<h1>Images</h1>
 
+<h3>My Images</h3>
 <table>
   <thead>
     <tr class="case-list">
@@ -30,7 +31,7 @@
     <% end %>
   </tbody>
 </table>
-<h3> Images Shared with me </h3>
+<h3 style="margin-top: 50px;"> Images shared with me </h3>
 <table>
   <thead>
     <tr class="case-list">
