--- a/app/views/shares/index.html.erb
+++ b/app/views/shares/index.html.erb
@@ -1,57 +1,44 @@
-<div class="container">
-<!-- Title -->
-<div class="row">
-    <div class="col-lg-12">
-        <h1>Shared by me</h1>
-    </div>
-</div>
+<h1>Shared case logs</h1>
 <!-- end of title -->
-<hr>
-<div class="row">
-  <div class="col-sm-12">
-    
-    <table class="table table-striped">
-      <thead>
-        <tr class="case-list">
-          <th>Case Log</th>
-          <th>Shared with</th>
-          <th></th>
-        </tr>
-      </thead>
-      <tbody>
-        <% @shared_by_me.each do |share| %>
-          <tr class="case-list">
-            <td><%= link_to share.case_log.title, share.case_log %></td>
-            <td><%= share.doctor.name %></td>
-            <td><%= link_to 'Undo sharing', share, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-          </tr>
-        <% end %>
-      </tbody>
-    </table>
- 
+<h3>Shared by me</h3>
+<table class="table table-striped">
+  <thead>
+    <tr class="case-list">
+      <th>Case Log</th>
+      <th>Shared with</th>
+      <th></th>
+    </tr>
+  </thead>
+  <tbody>
+    <% @shared_by_me.each do |share| %>
+      <tr class="case-list">
+        <td><%= link_to share.case_log.title, share.case_log %></td>
+        <td><%= share.doctor.name %></td>
+        <td><%= link_to 'Undo sharing', share, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+      </tr>
+    <% end %>
+  </tbody>
+</table>
 
 
-    <h1>Shared with me</h1>
-    <table class="table table-striped">
-      <thead>
-        <tr class="case-list">
-          <th>Case Log</th>
-          <th>Shared by</th>
-          <th ></th>
-        </tr>
-      </thead>
 
-      <tbody>
-        <% @shared_with_me.each do |share| %>
-          <tr class="case-list">
-            <td><%= link_to share.case_log.title, share.case_log %></td>
-            <td><%= share.case_log.doctor.name %></td>
-            <td><%= link_to 'Decline sharing', share, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-          </tr>
-        <% end %>
-      </tbody>
-    </table>
+<h3 style="margin-top: 50px;">Shared with me</h3>
+<table class="table table-striped">
+  <thead>
+    <tr class="case-list">
+      <th>Case Log</th>
+      <th>Shared by</th>
+      <th ></th>
+    </tr>
+  </thead>
 
-  </div>
-</div>
-</div>
+  <tbody>
+    <% @shared_with_me.each do |share| %>
+      <tr class="case-list">
+        <td><%= link_to share.case_log.title, share.case_log %></td>
+        <td><%= share.case_log.doctor.name %></td>
+        <td><%= link_to 'Decline sharing', share, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+      </tr>
+    <% end %>
+  </tbody>
+</table>
