--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -8,8 +8,18 @@ and open the template in the editor.
     Author     : mars
 */
 
+.form-model {
+    width: 75%;
+    float: left;
+    margin-left: 20px;
+}
+
 .caseview{
     padding-top: 0px;
+}
+
+#intro {
+    padding: 60px;
 }
 
 #index-login {
@@ -26,34 +36,39 @@ and open the template in the editor.
 }
 
 .footer-2 {
-    bottom: 0;
-    position: absolute;
     width: 100%;
-    padding-bottom: 0px;
+}
+
+body, html {
+    height: 100%;
 }
 
 .row-main {
-    max-height: 480px;
+    postition: fixed;
+    height: 75%;
     overflow-y: scroll;
 }
 
 h1 {
     margin-top: 20px;
-    margin-bottom: 40px;
-}
-
-#flash_notice {
-    font-size: 14px;
+    margin-bottom: 20px;
 }
 
 .error_messages {
     float:right;
-    margin-top: 25px;
+    width:20%;
+    color:red;
+}
+
+#error_messages {
+    float:right;
+    width:20%;
     color:red;
 }
 
 #error_explanation {
     float:right;
+    width:20%;
     color:red;
 }
 
