--- a/app/views/case_logs/_form.html.erb
+++ b/app/views/case_logs/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@case_log, html: {class: "form-horizontal", role: "form"}) do |f| %>
+<%= form_for(@case_log, html: {class: "form-horizontal form-model", role: "form"}) do |f| %>
   <div class="form-group">
       <%= f.label :title, class: "required col-sm-2 control-label" %>
       <div class="col-sm-10">
@@ -50,8 +50,9 @@
   </div>
 </div>
   <div class="actions form-group">
-    <div class="col-sm-10 col-sm-offset-2">
-      <%= f.submit :"Submit Case", class: "btn btn-block btn-info" %>
+    <div class="col-sm-10 col-sm-offset-2" style="width: 400px;">
+      <%= f.submit :"Submit", class: "btn btn-block btn-info", style:"width: 80px; display: inline;"%>
+      <%= link_to 'Cancel', case_logs_path, class:"btn btn-block btn-danger", style:"width: 80px; display: inline;" %>
     </div>
   </div>
 <% end %>
