--- a/app/views/case_logs/index.html.erb
+++ b/app/views/case_logs/index.html.erb
@@ -1,65 +1,54 @@
-<div class="container">
-<!-- Title -->
-<div class="row">
-    <div class="col-lg-12">
-        <h1>Listing case logs</h1>
-    </div>
-</div>
+<h1>Case logs</h1>
 <!-- end of title -->
-<hr>
-<div class="row">
-  <div class="col-sm-12">
-    <table class="table table-striped">
-      <thead>
-        <tr class="case-list">
-          <th>Title</th>
-          <th>Patient name</th>
-          <th>Doctor</th>
-          <th colspan="3"></th>
-          <th><%= link_to 'New Case log', new_case_log_path %></th>
-        </tr>
-      </thead>
 
-      <tbody>
-        <% @case_logs.each do |case_log| %>
-          <tr class="case-list">
-            <td><%= case_log.title %></td>
-            <td><%= case_log.patient_name %></td>
-            <td><%= case_log.doctor.name %></td>
-            <td><%= link_to 'Show', case_log %></td>
-            <td><%= link_to 'Edit', edit_case_log_path(case_log) %></td>
-            <td><%= link_to 'Destroy', case_log, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-            <td><%= link_to 'Share', new_case_log_share_path(case_log) %></td>
-          </tr>
-        <% end %>
-      </tbody>
-    </table>
+<h3> My case logs </h3>
+<table class="table table-striped">
+  <thead>
+    <tr class="case-list">
+      <th>Title</th>
+      <th>Patient name</th>
+      <th>Doctor</th>
+      <th colspan="3"></th>
+      <th><%= link_to 'New Case log', new_case_log_path %></th>
+    </tr>
+  </thead>
 
-    <h3> Case logs shared with me </h3>
-    <table class="table table-striped">
-      <thead>
-        <tr class="case-list">
-          <th>Title</th>
-          <th>Patient name</th>
-          <th>Doctor</th>
-          <th colspan="3"></th>
-        </tr>
-      </thead>
+  <tbody>
+    <% @case_logs.each do |case_log| %>
+      <tr class="case-list">
+        <td><%= case_log.title %></td>
+        <td><%= case_log.patient_name %></td>
+        <td><%= case_log.doctor.name %></td>
+        <td><%= link_to 'Show', case_log %></td>
+        <td><%= link_to 'Edit', edit_case_log_path(case_log) %></td>
+        <td><%= link_to 'Destroy', case_log, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to 'Share', new_case_log_share_path(case_log) %></td>
+      </tr>
+    <% end %>
+  </tbody>
+</table>
 
-      <tbody>
-        <% @shares.each do |share| %>
-          <tr class="case-list">
-            <td><%= share.case_log.title %></td>
-            <td><%= share.case_log.patient_name %></td>
-            <td><%= share.case_log.doctor.name %></td>
-            <td></td>
-            <td></td>
-            <td><%= link_to 'Show', share.case_log %></td>
-          </tr>
-        <% end %>
-      </tbody>
-    </table>
+<h3 style="margin-top: 50px;"> Case logs shared with me </h3>
+<table class="table table-striped">
+  <thead>
+    <tr class="case-list">
+      <th>Title</th>
+      <th>Patient name</th>
+      <th>Doctor</th>
+      <th colspan="3"></th>
+    </tr>
+  </thead>
 
-  </div>
-</div>
-</div>
+  <tbody>
+    <% @shares.each do |share| %>
+      <tr class="case-list">
+        <td><%= share.case_log.title %></td>
+        <td><%= share.case_log.patient_name %></td>
+        <td><%= share.case_log.doctor.name %></td>
+        <td></td>
+        <td></td>
+        <td><%= link_to 'Show', share.case_log %></td>
+      </tr>
+    <% end %>
+  </tbody>
+</table>
