--- a/app/views/doctors/_form.html.erb
+++ b/app/views/doctors/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@doctor) do |f| %>
+<%= form_for(@doctor, html: {class: "form-model", role: "form"}) do |f| %>
   <% if @doctor.errors.any? %>
     <div id="error_explanation">
       <strong><%= pluralize(@doctor.errors.count, "error") %> prohibited this doctor from being saved:</strong>
