--- a/app/views/doctors/show.html.erb
+++ b/app/views/doctors/show.html.erb
@@ -1,10 +1,4 @@
     <h1>Account information</h1>
-    <div style="float:right;">
-      <%= link_to 'Edit', edit_doctor_path(@doctor) %> 
-      <% if current_user.try(:admin) %>
-      |<%= link_to 'Back', doctors_path %>
-      <% end %>
-    </div>
     <p>
       <strong>License:</strong>
       <%= @doctor.license %>
@@ -31,4 +25,11 @@
       <%= @doctor.admin %>
     </p>
     <% end %>
+
+    <div style="float:left;">
+      <%= link_to 'Edit', edit_doctor_path(@doctor) %> 
+      <% if current_user.try(:admin) %>
+      |<%= link_to 'Back', doctors_path %>
+      <% end %>
+    </div>
 
