--- a/app/views/images/_form.html.erb
+++ b/app/views/images/_form.html.erb
@@ -1,16 +1,4 @@
-<%= form_for([@case_log, @image]) do |f| %>
-  <% if @image.errors.any? %>
-    <div id="error_explanation">
-      <strong><%= pluralize(@image.errors.count, "error") %> prohibited this image from being saved:</strong>
-
-      <ul>
-      <% @image.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
-      <% end %>
-      </ul>
-    </div>
-  <% end %>
-
+<%= form_for([@case_log, @image], html: {class: "form-model", role: "form"}) do |f| %>
   <div class="field">
     <%= f.label :title, class: :required %><br>
     <%= f.text_field :title %>
@@ -24,6 +12,9 @@
     <%= f.text_area :description %>
   </div>
   <div class="actions">
-    <%= f.submit %>
+    <div class="form-group">
+    <%= f.submit "Share", class:"btn btn-block btn-info", style:"width: 80px; display:inline;" %> 
+    <%= link_to 'Cancel', images_path, class:"btn btn-block btn-danger", style:"width: 80px; display: inline;" %>
+  </div>
   </div>
 <% end %>
