--- a/app/views/shares/_form.html.erb
+++ b/app/views/shares/_form.html.erb
@@ -1,23 +1,11 @@
-<%= form_for([@case_log, @share]) do |f| %>
-  <% if @share.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@share.errors.count, "error") %> prohibited this share from being saved:</h2>
-
-      <ul>
-      <% @share.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
-      <% end %>
-      </ul>
-    </div>
-  <% end %>
-
-  <div class="field">
-    <%= f.label "Enter the email of the doctor that you want to share this log with:" %><br>
-    <%= f.text_field :doctor_email %>
+<%= form_for([@case_log, @share], html: {class: "form-model", role: "form"}) do |f| %>
+  <div class="form-group">
+      <%= f.label "Enter the email of the doctor that you want to share this log with:" %><br>
+      <%= f.text_field :doctor_email, style:"width: 300px;"%>
   </div>
-
-  <div class="actions">
-    <%= f.submit "Share" %>
+  <div class="form-group">
+    <%= f.submit "Share", class:"btn btn-block btn-info", style:"width: 80px; display:inline;" %> 
+    <%= link_to 'Cancel', shares_path, class:"btn btn-block btn-danger", style:"width: 80px; display: inline;" %>
   </div>
 <% end %>
 
