Fixed invalid url error message routing

--- a/app/views/images/_form.html.erb
+++ b/app/views/images/_form.html.erb
@@ -13,7 +13,7 @@
   </div>
   <div class="actions">
     <div class="form-group">
-    <%= f.submit "Share", class:"btn btn-block btn-info", style:"width: 80px; display:inline;" %> 
+    <%= f.submit "Submit", class:"btn btn-block btn-info", style:"width: 80px; display:inline;" %> 
     <%= link_to 'Cancel', images_path, class:"btn btn-block btn-danger", style:"width: 80px; display: inline;" %>
   </div>
   </div>
