final touches/fixes to ui

--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -90,6 +90,10 @@ h1 {
     height: 360px;
 }
 
+#flash_notice, #notice {
+    font-size: 13pt;
+}
+
 ::-webkit-scrollbar {
     -webkit-appearance: none;
     width: 7px;
